# magpie-fuzz

./: Cargo.toml  README.md
.github/workflows/: fuzz.yaml  fuzz.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: common.rs  illegal_moves_should_be_illegal.rs  illegal_moves_should_not_place.rs  legal_moves_should_be_legal.rs  legal_moves_should_place.rs
