[package]
name = "magpie-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }

[dependencies.magpie]
# path = ".."
version = "0.11.1"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "legal_moves_should_place"
path = "fuzz_targets/legal_moves_should_place.rs"
test = false
doc = false

[[bin]]
name = "legal_moves_should_be_legal"
path = "fuzz_targets/legal_moves_should_be_legal.rs"
test = false
doc = false

[[bin]]
name = "illegal_moves_should_not_place"
path = "fuzz_targets/illegal_moves_should_not_place.rs"
test = false
doc = false

[[bin]]
name = "illegal_moves_should_be_illegal"
path = "fuzz_targets/illegal_moves_should_be_illegal.rs"
test = false
doc = false
